# ccontrol

./: 99-ccontrol.rules  AUTHORS  Makefile.am  README.markdown  README.md  compat.m4  config.h.in  configure.ac  version.sh
benchs/: README.md  cache-bandwidth.c
pkg/arch/: PKGBUILD
src/: Makefile.am
src/common/: Makefile.am  ccontrol_ioctl.h  ccontrol_types.h
src/commons/: Makefile.am  ioctls.h
src/lib/: Makefile.am  ccontrol.c  ccontrol.h  libc_bypass.c
src/module/: Makefile  Makefile.in  ccontrol.c
src/utils/: Makefile.am  main.c
tests/: Makefile.am  random.c
